# auto_test

./: .env  .env.example  .gitignore  .key  README.md  demo_dialog_effect.py  demo_dialog_handling.py  pf_logger.py  pyproject.toml  pytest.ini  read_file.py  test.db  test_allure_attachment.py  test_api_client.py  test_auto_continue.py  test_circular_import.py  test_db_direct.py  test_db_helper.py  test_direct_import.py  test_error_monitor.py  test_import.py  test_interactive_mode.py  test_logger_config.py  test_login_cache.py  test_screenshot_helper.py  test_selector_exact.py  test_selector_exact_direct.py  test_selector_exact_simple.py  test_selector_support.py  test_simple_dialog.py  test_simple_import.py
config/: __init__.py
config/environments/: base.yaml  prod.yaml  staging.yaml
config/secrets/: .secret_key
config/sources/: env_loader.py  yaml_loader.py
environments/: alpha.yaml  base.yaml  beta.yaml  prod.yaml
logs/: TestRun  TestRun.2026-02-02  TestRun.2026-02-04  TestRun.2026-02-05  TestRun.2026-02-06  TestRun.2026-02-07  TestRun.2026-02-08  test_run.log.2026-02-18
logs/history/: test_run.log.2026-02-19
output/: orders.csv  orders.json  users.csv  users.json
output/data_faker/: orders.csv  orders.json  users.csv  users.json
pages/: README.md  baidu_page.py  baidu_selector.py  base_page.py
pages/components/: login_page.py
reports/allure-results/: 5deabce7-7721-472c-8e83-e2188cde9e29-result.json
scripts/: generate_login_state.py
src/api_client/: __init__.py  client.py
src/auth/: README.md  cache_utils.py  login_cache.py  smart_login.py  smart_login_bak.py
src/auto_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/common/: screenshot_helper.py  selector_helper.py  verify_security_log.py  visual_validator.py
src/config/: README.md  __init__.py  _path.py  _test_data.py  demo.py  env_loader.py  locators_i18n.py  manager.py  path.py  settings.py  yaml_loader.py
src/config_bak/: __init__.py  env_loader.py  locators_i18n.py  manager.py  yaml_loader.py
src/core/: README.md  __init__.py  cache_utils.py  login_cache.py  network_capture.py  screenshot.py  selector.py  smart_login.py  table_helper.py  verify_security_log.py  visual_validator.py
src/data/: README.md  __init__.py  data_faker.py  data_loader.py  db_helper.py  yaml_cases_loader.py
src/helpers/: str_formatters.py  time_formatter.py
src/logger/: README.md  __init__.py  components.py  config.py  core.py  demo.py  demo_log_generation.py  diagnose.py  diagnostics.py  formatters.py  handlers.py  masking.py  metrics.py
src/monitoring/: README.md  __init__.py  error_monitor.py  log_monitor.py
src/mypkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/security/: README.md  __init__.py  demo.py  env_encryptor copy.py  env_encryptor.py  env_loader.py  key_rotator.py  secret_str.py  secrets_manager.py  secure_env_loader.py
src/utils/: __init__.py  api_client.py  (+10 more)
test_data/: login_page.yaml  test_cases.yaml
tests/: conftest copy 2.py  conftest copy.py  conftest.py  conftest_new.py  test_dialog_handling.py  test_example.py  test_fixtures.py  test_login.py  test_login_cache_example.py  test_parameter_passing.py  test_screenshot_helper.py  test_utils_api.py  test_yaml_fix.py
utils/: crypt.py  data_faker.py  data_loader.py  logger.py  logger_bak.py  screenshot_helper.py
(+53 files in other folders)
