[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_test"
version = "0.1.0"
description = "My awesome package"
readme = "README.md"
authors = [{name = "chao", email = "178754558@qq.com"}]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    # 核心依赖
    "playwright>=1.40.0",
    "allure-python-commons>=2.13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pydantic",
    
    # 数据库相关依赖
    "sqlalchemy>=2.0",
    "pymysql",
    "psycopg2-binary",
    "tqdm",
    "faker",
    "psutil>=5.9.0",  # 用于环境检测
    "allure-pytest",
    "cryptography"
    
]



[tool.setuptools.packages.find]
where = ["src"]

